--- a/style.css
+++ b/style.css
@@ -350,15 +350,15 @@ body {
         display: grid;
        grid-template-columns: 1fr;
         padding: 5%;
+        padding-top: 140px;
         text-align: center;
         justify-items: center;
     }
    .apresentacao__conteudo {
-        width: 100%;     
-    }
-    .apresentacao__conteudo {
-        display: contents;
-    }
+     display: flex;
+        flex-direction: column;
+        gap: 16px;
+   }
     .apresentacao__conteudo__titulo {
         order: 1;
     }
@@ -398,6 +398,7 @@ body {
       flex-direction: column;
        text-align: center;
        gap: 24px;
+       align-items: center;
    }
 
    .apresentacao__topo__texto {
@@ -406,6 +407,22 @@ body {
    }
 
    .apresentacao__imagem {
+       width: 100%;
+       max-width: 350px;
+   }
+      .apresentacao__destaque {
+       width: 100%;
+       left: 0;
+       right: 0;
+       margin-left: 0;
+       margin-right: 0;
+   }
+      .apresentacao__imagens__duplas {
+       flex-direction: column;
+       align-items: center;
+   }
+
+   .apresentacao__imagem__pequena {
        width: 100%;
        max-width: 350px;
    }
