--- a/style.css
+++ b/style.css
@@ -417,12 +417,12 @@ body {
    }
      .apresentacao__conteudo__titulo {
       font-size: 1.4rem; 
-        text-align: center;
+        text-align: justify;
    }
 
    .apresentacao__conteudo__texto {
-       font-size: 1rem;
-       text-align: center;
+       font-size: 1.1rem;
+       text-align: justify;
        line-height: 1.4;
    }
     .apresentacao__topo {
